--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   "homepage": "https://github.com/EvgeniiShumeiko/javascript-advanced#readme",
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.1.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.2.2",
-    "bootstrap": "^5.0.0-beta2",
-    "webpack-dev-server": "^3.11.2"
+    "bootstrap": "^5.0.0-beta2"
   }
 }
