--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.12",
+    "vue-infinite-loading": "^2.4.5",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   }
