--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue": "^2.6.12",
     "vue-infinite-loading": "^2.4.5",
     "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2"
   }
 }
