--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-vue": "^2.21.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "sqlite3": "^5.0.2",
     "vue": "^2.6.12",
     "vue-infinite-loading": "^2.4.5",
     "vue-loader": "^15.9.6",
